# did-wba-example

./: .env.example  .gitignore  README-uv.md  README.md  README_cn.md  did_server.py  freshguide.md  pyproject.toml
api/: ad_router.py  auth_router.py  did_router.py
auth/: auth_middleware.py  custom_did_resolver.py  did_auth.py  token_auth.py
core/: app.py  config.py
doc/: technical_documentation_en.md  技术说明文档.md
doc/test_jwt_key/: private_key.pem  public_key.pem
unittest/: test_auth_flow.py
